src/test/deca/syntax/invalid/renduInter01/02missing_condition_if.deca
{
    int x = 4;
    if ( ) {
        println("hello if", x);
    } else {
        println("hello else_if2 : ", x);
    }

}